2006-10-05 Harri Pitkänen  <hatapitk@iki.fi>

	* Add missing 'const' to usage example in voikko.h.
	* Add new exported function init_libvoikko_with_path.
	* Increase version to 1.2 and libtool version info to 3:0:2.

2006-09-26 Harri Pitkänen  <hatapitk@iki.fi>

	* Increase LIBVOIKKO_MAX_WORD_CHARS back to 255, the issue with
	  complicated compound words is now properly fixed in Malaga and
	  Suomi-malaga.
	* Fix suggestions when VOIKKO_OPT_IGNORE_DOT is set and word has only
	  one character before the dot.
	* Prepare some suggestion functions to accept strings that are not
	  null terminated.
	* Markup fix for voikkospell.1, thanks to Timo Jyrinki
	* Increase version to 1.1.1.

2006-09-14 Harri Pitkänen  <hatapitk@iki.fi>

	* Decrease LIBVOIKKO_MAX_WORD_CHARS to prevent freezing malaga with too complicated
	  compound words.

2006-08-30 Harri Pitkänen  <hatapitk@iki.fi>

	* Look for Malaga project file voikko-fi_FI.pro instead of suomi.pro.
	* Implement the cache size parameter in voikko_init.
	* Add -c option to voikkospell to control the cache size parameter.
	* Update README.
	* Reject overly long input strings in voikko_spell_ucs4 and voikko_suggest_ucs4
	  just to be sure that any bugs later will not cause buffer overflows. The
	  cstr variants have been doing this check in charset conversion.
	* Adjust library version info for release of version 1.1.

2006-08-22 Harri Pitkänen  <hatapitk@iki.fi>

	* If --with-malaga-path is not set, default to installation prefix.
	* Fix compilation with -fno-common (needed on OS X).
	* Respect VOIKKO_OPT_IGNORE_DOT in suggestion code. This breaks suggestions
	  with words that actually have a dot in them, but they are rare enough to
	  not matter much.

2006-08-16 Harri Pitkänen  <hatapitk@iki.fi>

	* Three new character replacement suggestions.

2006-08-14 Harri Pitkänen  <hatapitk@iki.fi>

	* Accept some alternative Unicode sequences for certain characters.